Source/WebCore/css/parser/CSSParserImpl.cpp
@@ -680,12 +680,10 @@ RefPtr<StyleRuleFontPaletteValues> CSSParserImpl::consumeFontPaletteValuesRule(C
     if (auto fontFamilyValue = properties->getPropertyCSSValue(CSSPropertyFontFamily))
         fontFamily = downcast<CSSPrimitiveValue>(*fontFamilyValue).fontFamily().familyName;
 
-    FontPaletteIndex basePalette;
+    std::optional<FontPaletteIndex> basePalette;
     if (auto basePaletteValue = properties->getPropertyCSSValue(CSSPropertyBasePalette)) {
         const auto& primitiveValue = downcast<CSSPrimitiveValue>(*basePaletteValue);
-        if (primitiveValue.isString())
-            basePalette = FontPaletteIndex(primitiveValue.stringValue());
-        else if (primitiveValue.isNumber())
+        if (primitiveValue.isNumber())
             basePalette = FontPaletteIndex(primitiveValue.value<unsigned>());
         else if (primitiveValue.valueID() == CSSValueLight)
             basePalette = FontPaletteIndex(FontPaletteIndex::Type::Light);
@@ -697,20 +695,16 @@ RefPtr<StyleRuleFontPaletteValues> CSSParserImpl::consumeFontPaletteValuesRule(C
     if (auto overrideColorsValue = properties->getPropertyCSSValue(CSSPropertyOverrideColors)) {
         const auto& list = downcast<CSSValueList>(*overrideColorsValue);
         for (const auto& item : list) {
-            FontPaletteValues::PaletteColorIndex key(nullAtom());
             const auto& pair = downcast<CSSFontPaletteValuesOverrideColorsValue>(item.get());
-            if (pair.key().isString())
-                key = pair.key().stringValue();
-            else if (pair.key().isNumber())
-                key = pair.key().value<unsigned>();
-            else
+            if (!pair.key().isNumber())
                 continue;
+            unsigned key = pair.key().value<unsigned>();
             Color color = pair.color().isRGBColor() ? pair.color().color() : StyleColor::colorFromKeyword(pair.color().valueID(), { });
             overrideColors.append(std::make_pair(key, color));
         }
     }
 
-    return StyleRuleFontPaletteValues::create(name->stringValue(), fontFamily, basePalette, WTFMove(overrideColors));
+    return StyleRuleFontPaletteValues::create(name->stringValue(), fontFamily, WTFMove(basePalette), WTFMove(overrideColors));
 }
 
 RefPtr<StyleRuleKeyframes> CSSParserImpl::consumeKeyframesRule(bool webkitPrefixed, CSSParserTokenRange prelude, CSSParserTokenRange block)
